--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,3 +3,10 @@
   height: 200px; /* Adjust the height as needed */
   object-fit: cover; /* This will make the image cover the entire area */
 }
+
+.artist-card {
+  width: 75%; /* Adjust the width as needed */
+  height: 200px; /* Fixed height to maintain square shape */
+  overflow: hidden; /* Hide overflowed content */
+}
+
